--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "history": "^4.10.1",
     "http-proxy-middleware": "^1.0.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
@@ -19,13 +20,16 @@
     "postcss-loader": "^3.0.0",
     "postcss-px2rem": "^0.3.0",
     "pubsub-js": "^1.8.0",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "swiper": "^5.3.1"
   },
